removing border of invalid input in feed_post

--- a/module_2/styles.css
+++ b/module_2/styles.css
@@ -262,8 +262,10 @@ a {
 	outline: none;
 }
 
+.feed__post__status__write-comment input:invalid,
 .feed__post__status__write-comment input:focus {
 	outline: none;
+	box-shadow: none;
 }
 
 .feed__post__status__write-comment button {
