--- a/module_1/style.css
+++ b/module_1/style.css
@@ -3,6 +3,10 @@ html {
 	background-color: #F2F2F2;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 .container {
 	margin: auto;
 	max-width: 960px;
@@ -231,18 +235,23 @@ html {
 
 .card .card-header .card-header-hover {
 	height: 100%;
-	text-align: center;
+	width: 100%;
 	position: absolute;
+	text-align: center;
 	left: 0;
-	right: 0;
 	top: 0;
-	bottom: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .card .card-header .card-header-hover h3 {
 	opacity: 0;
 	font-size: 18px;
 	color: #e4bb23;
+	margin: 0;
+	padding-bottom: 20px;
 	transition: 0.2s;
 }
 
@@ -250,6 +259,7 @@ html {
 	opacity: 0;
 	font-size: 50px;
 	color: white;
+	padding-bottom: 20px;
 	transition: 0.2s;
 }
 
@@ -307,8 +317,13 @@ html {
 	font-size: 24px;
 }
 
-.footer {
+footer {
 	background-color: white;
+	width: 100%;
+	margin: auto;
+}
+
+.footer {
 	padding: 20px;
 	display: flex;
 	justify-content: space-between;
